Updated i18n, added /employers.

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -99,6 +99,7 @@ h1 h2 h3 h4
   letter-spacing: 1px
   color: #ffffff
   cursor: pointer
+  margin: 0px 10px
 
 a[data-toggle="modal"]
   cursor: pointer
