--- a/app/templates/editor.jade
+++ b/app/templates/editor.jade
@@ -2,30 +2,30 @@ extends /templates/base
 
 block content
   
-  h2(data-i18n="editor.title") CodeCombat Editors
+  h2(data-i18n="editor.main_title") CodeCombat Editors
   
-  p
+  p(data=i18n="editor.main_description")
     | Build your own levels, campaigns, units and educational content.
     | We provide all the tools you need!
   
   div.editor-column
     h3
-      a(href='/editor/level') Level Editor
-    div.description
+      a(href='/editor/level', data-i18n="editor.level_title") Level Editor
+    div.description(data-i18n="editor.level_description")
       | Includes the tools for scripting, uploading audio, and constructing custom logic
       | to create all sorts of levels. Everything we use ourselves!
   
   div.editor-column
     h3
-      a(href='/editor/thang') Thang Editor
-    div.description
+      a(href='/editor/thang', data-i18n="editor.thang_title") Thang Editor
+    div.description(data-i18n="editor.thang_description")
       | Build units, defining their default logic, graphics and audio.
       | Currently only supports importing Flash exported vector graphics.
 
   div.editor-column
     h3
-      a(href='/editor/article') Article Editor
-    div.description
+      a(href='/editor/article', data-i18n="editor.article_title") Article Editor
+    div.description(data-i18n="editor.article_description")
       | Write articles that give players overviews of programming concepts which can be
       | used across a variety of levels and campaigns.
   
@@ -34,11 +34,13 @@ block content
   hr
   
   p
-    span
+    span(data-i18n="editor.security_notice")
       | Many major features in these editors are not currently enabled by default.
       | As we improve the security of these systems, they will be made generally available.
       | If you'd like to use these features sooner, 
     a(title='Contact', tabindex=-1, data-toggle="coco-modal", data-target="modal/contact", data-i18n="editor.contact_us") email us!
-    span  You can also find us in our 
+    |  
+    span(data-i18n="editor.hipchat_prefix") You can also find us in our
+    |  
     strong
-      a(href="http://www.hipchat.com/g3plnOKqa") HipChat room.
+      a(href="http://www.hipchat.com/g3plnOKqa", data-i18n="editor.hipchat_url") HipChat room.
