--- a/app/templates/editor/level/thangs_tab.jade
+++ b/app/templates/editor/level/thangs_tab.jade
@@ -3,7 +3,7 @@
   #thangs-treema(title="Double click to configure a thang")
 
 .world-container.thangs-column
-  h3(data-i18n="editor.level_tab_thangs_conditions") World Starting Conditions
+  h3(data-i18n="editor.level_tab_thangs_conditions") Starting Conditions
   #canvas-wrapper
     canvas(width=924, height=589)#surface
     #canvas-left-gradient.gradient
