Updated some tags. Added a script to copy tags from en.coffee.

--- a/app/templates/modal/wizard_settings.jade
+++ b/app/templates/modal/wizard_settings.jade
@@ -1,10 +1,10 @@
 extends /templates/modal/modal_base
 
 block modal-header-content
-  h3(data-i18n="modal.wizard_settings_title") Wizard Settings
+  h3(data-i18n="wizard_settings.title") Wizard Settings
 
 block modal-body-content
-  h4 Customize Your Avatar
+  h4(data-i18n="wizard_settings.customize_avatar") Customize Your Avatar
   
   canvas(width="120px", height="150px")
   .settings
