Updated language progress; added Slovene placeholder.

--- a/app/templates/teachers.jade
+++ b/app/templates/teachers.jade
@@ -69,20 +69,43 @@ block content
       
       h4 Languages
       ul
-        li ✓ English
-        li ~✓ Deutsch - German
-        li ~✓ español (América Latina) - Spanish (Latin America)
-        li ~✓ español (ES) - Spanish (Spain)
-        li ~✓ português do Brasil - Portuguese (Brazil)
-        li ~✓ Português europeu - Portuguese (Portugal)
-        li ~✓ magyar - Hungarian
-        li ~✓ Türkçe - Turkish
-        li ~✓ français - French
-        li ~✓ Svenska - Swedish
-        li ~ język polski - Polish
-        li ~ 中文 - Chinese
-        li ~ 日本語 - Japanese
-        li ~ ελληνικά - Greek
-        li ~ ไทย - Thai
-        li ~ dansk - Danish
-        li ~ slovenčina - Slovak
+        li ✓ English - English
+        li ~✓ русский язык, Russian
+        li ~✓ Deutsch, German
+        li ~✓ español (América Latina), Spanish (Latin America)
+        li ~✓ español (ES), Spanish (Spain)
+        li ~✓ 简体中文, Chinese (Simplified)
+        li ~✓ 繁体中文, Chinese (Traditional)
+        li ~✓ français, French
+        li ~✓ 日本語, Japanese
+        li العربية, Arabic
+        li ~✓ português do Brasil, Portuguese (Brazil)
+        li ~✓ Português europeu, Portuguese (Portugal)
+        li ~✓ język polski, Polish
+        li ~✓ italiano, Italian
+        li ~✓ Türkçe, Turkish
+        li ~✓ Nederlands, Dutch
+        li ~ فارسی, Persian
+        li čeština, Czech
+        li ~✓ Svenska, Swedish
+        li ~✓ Bahasa Indonesia, Indonesian
+        li ~✓ ελληνικά, Greek
+        li ~✓ limba română, Romanian
+        li ~ Tiếng Việt, Vietnamese
+        li ~✓ magyar, Hungarian
+        li ~ ไทย, Thai
+        li ~ dansk, Danish
+        li 한국어, Korean
+        li ~ slovenčina, Slovak
+        li ~✓ slovenščina, Slovene
+        li suomi, Finnish
+        li български език, Bulgarian
+        li Norwegian (Nynorsk), Norwegian Nynorsk
+        li ~ Norsk Bokmål, Norwegian (Bokmål)
+        li ~ עברית, Hebrew
+        li lietuvių kalba, Lithuanian
+        li ~✓ српски, Serbian
+        li ~✓ українська мова, Ukranian
+        li मानक हिन्दी, Hindi
+        li ~ اُردُو, Urdu
+        li ~ Bahasa Melayu, Bahasa Malaysia
