--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -81,12 +81,11 @@ block content
           li Greek - Stergios
           li Latin American Spanish - Jesús Ruppel, Matthew Burt, Mariano Luzza
           li Spain Spanish - Matthew Burt, Anon
-          li French - Xeonarno, Anon
+          li French - Xeonarno, Anon, Spigushe
           li Hungarian - Anon
           li Japanese - g1itch
           li Chinese - spacepope
           li Polish - Anon
           li Danish - Anon
           li Slovak - Anon
-
     div.clearfix
