--- a/app/styles/editor.sass
+++ b/app/styles/editor.sass
@@ -1,41 +1,12 @@
 @import "bootstrap/variables"
 #editor-level-view
-  .images
-    margin: 30px 0
-    text-align: center
-    div
-      float: left
-      width: 25%
-      padding: 10px 40px
-      box-sizing: border-box
-    img
-      width: 100%
-  
-  #image-modal
-    .modal-body
-      max-height: 100%
-    
-    height: 80%
-    width: 80%
-    margin-left: -40%
-    
-    img
-      display: block
-      margin: 0 auto
-      max-height: 80%
-  
-  #after-images
-    clear: both
-    
-  ul#prereqs
-    margin: 20px 40px
+  .editor-column
+    width: 33%
+    box-sizing: border-box
+    padding-right: 20px
+    float: left
+    h3
+      text-decoration: underline
+      margin-bottom: 2px
 
-  #editor-links .btn
-    margin-right: 20px
-    margin-bottom: 30px
-
-//.screencast-wrapper
-  //  text-align: center
-  //  background: $gray
-  //  object
-  //    display: inline-block
+  
