Translated most of the Dutch version. (It's my native language)

--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -78,6 +78,7 @@ block content
           li German - Dirk, Anon
           li Thai - Kamolchanok Jittrepit
           li Vietnamese - An Nguyen Hoang Thien
+          li Dutch - Glen De Cauwsemaecker
           li Greek - Stergios
           li Latin American Spanish - Jesús Ruppel, Matthew Burt, Mariano Luzza
           li Spain Spanish - Matthew Burt, Anon
