--- a/app/templates/legal.jade
+++ b/app/templates/legal.jade
@@ -12,13 +12,13 @@ block content
   p
     span(data-i18n="legal.opensource_description_prefix")
       | Check out 
-    a(href="https://github.com/codecombat/codecombat", data-i18n="github_url")
+    a(href="https://github.com/codecombat/codecombat", data-i18n="legal.github_url")
       | our GitHub
     span , 
     span(data-i18n="legal.opensource_description_center")
       | and help out if you like! CodeCombat is built on 
       | dozens of open source projects, and we love them. See 
-    a(href="https://github.com/codecombat/codecombat/wiki/Third-party-software-and-services", data-i18n="archmage_wiki_url")
+    a(href="https://github.com/codecombat/codecombat/wiki/Third-party-software-and-services", data-i18n="legal.archmage_wiki_url")
       | our Archmage wiki
     span  
     span(data-i18n="legal.opensource_description_suffix")
