Add basic code-saved indicator
Using the tome:spell-changed callback to determine when to
start showing the code-saved indicator

--- a/app/templates/play/level/tome/spell.jade
+++ b/app/templates/play/level/tome/spell.jade
@@ -1,3 +1,5 @@
 img(src="/images/level/code_editor_background.png").code-background
     
 div.ace
+
+#save-status(data-i18n="account_settings.saved") Changes saved
