Removed comma from diplomats template

--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -88,6 +88,6 @@ block content
           li Polish - Anon
           li Danish - Anon
           li Slovak - Anon
-          li Persian - Reza Habibi(Rehb),
+          li Persian - Reza Habibi(Rehb)
 
     div.clearfix
