--- a/app/styles/account/settings.sass
+++ b/app/styles/account/settings.sass
@@ -35,22 +35,41 @@
     font-size: 12px
     
 #wizard-settings-tab-view
-  .form-horizontal
+  #color-settings
     float: left
-    width: 400px
-    margin-left: 50px
+    width: 600px
+    margin-left: 30px
+    
   canvas
     float: left
     border: 2px solid black
     margin: 20px
     
-  .selector
-    position: relative
-    top: 10px
-    left: 10px
-    
-  h2 input
-    margin-left: 10px
-    
-  .form-horizontal .control-group
+  .color-group
+    clear: both
+    padding-bottom: 10px
     margin-bottom: 10px
+    border-bottom: 1px solid gray
+
+  .name-cell
+    float: left
+    width: 100px
+    padding-top: 2px
+    
+    input
+      margin-right: 10px
+      position: relative
+      top: -3px
+    
+  .checkbox-cell
+    float: left
+    width: 40px
+    
+  .slider-cell
+    margin-bottom: 10px
+    float: left
+    width: 120px
+
+  .selector
+    width: 100px
+    
