--- a/app/templates/play/level/tome/spell.jade
+++ b/app/templates/play/level/tome/spell.jade
@@ -2,4 +2,4 @@ img(src="/images/level/code_editor_background.png").code-background
     
 div.ace
 
-#save-status(data-i18n="account_settings.saved") Changes saved
+#save-status(data-i18n="play_level.spell_saved") Spell Saved
