fix i18n edito.main_description in editor.jade

--- a/app/templates/editor.jade
+++ b/app/templates/editor.jade
@@ -4,7 +4,7 @@ block content
   
   h2(data-i18n="editor.main_title") CodeCombat Editors
   
-  p(data=i18n="editor.main_description")
+  p(data-i18n="editor.main_description")
     | Build your own levels, campaigns, units and educational content.
     | We provide all the tools you need!
   
