use i18n contribute class in settigs.jade

--- a/app/templates/account/settings.jade
+++ b/app/templates/account/settings.jade
@@ -109,7 +109,7 @@ block content
                   | (Coder)
               .controls
                 input#email_developer(name="email_developer", type="checkbox", checked=subs.developer)
-                span(data-i18n="classes.archmage_email_description").help-inline Get emails about general news and announcements about CodeCombat.
+                span(data-i18n="contribute.archmage_subscribe_desc").help-inline Get emails about general news and announcements about CodeCombat.
 
             .control-group
               label.control-label(for="email_level_creator")
@@ -120,7 +120,7 @@ block content
                   | (Level Builder)
               .controls
                 input#email_level_creator(name="email_level_creator", type="checkbox", checked=subs.level_creator)
-                span(data-i18n="classes.artisan_email_description").help-inline Get emails on level editor updates and announcements.
+                span(data-i18n="contribute.artisan_subscribe_desc").help-inline Get emails on level editor updates and announcements.
 
             .control-group
               label.control-label(for="email_tester")
@@ -131,7 +131,7 @@ block content
                   | (Level Playtester)
               .controls
                 input#email_tester(name="email_tester", type="checkbox", checked=subs.tester)
-                span(data-i18n="classes.adventurer_email_description").help-inline Get emails when there are new levels to test.
+                span(data-i18n="contribute.adventurer_subscribe_desc").help-inline Get emails when there are new levels to test.
 
             .control-group
               label.control-label(for="email_article_editor")
@@ -142,7 +142,7 @@ block content
                   | (Article Editor)
               .controls
                 input#email_article_editor(name="email_article_editor", type="checkbox", checked=subs.article_editor)
-                span(data-i18n="classes.scribe_email_description").help-inline Get emails about article writing announcements.
+                span(data-i18n="contribute.scribe_subscribe_desc").help-inline Get emails about article writing announcements.
 
             .control-group
               label.control-label(for="email_translator")
@@ -153,7 +153,7 @@ block content
                   | (Translator)
               .controls
                 input#email_translator(name="email_translator", type="checkbox", checked=subs.translator)
-                span(data-i18n="classes.diplomat_email_description").help-inline Get emails about i18n developments and, eventually, levels to translate.
+                span(data-i18n="contribute.diplomat_subscribe_desc").help-inline Get emails about i18n developments and, eventually, levels to translate.
 
             .control-group
               label.control-label(for="email_support")
@@ -164,6 +164,6 @@ block content
                   | (Support)
               .controls
                 input#email_support(name="email_support", type="checkbox", checked=subs.support)
-                span(data-i18n="classes.ambassador_description").help-inline Get emails on support updates and multiplayer developments.
+                span(data-i18n="contribute.ambassador_subscribe_desc").help-inline Get emails on support updates and multiplayer developments.
                   
         button.btn#toggle-all-button(data-i18n="account_settings.email_toggle") Toggle All
