--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -24,6 +24,16 @@ h1 h2 h3 h4
   font-weight: normal
   letter-spacing: 1px
 
+.navbuttontext-user-name
+  max-width: 125px
+  overflow: hidden
+  text-overflow: ellipsis
+  white-space: nowrap
+  display: inline-block
+  padding: 0
+  margin: 0
+  height: 18px
+
 .navbar .nav.navbar-link-text, .navbar .nav.navbar-link-text > li > a
   font-family: 'Bangers', cursive
   font-weight: normal
