--- a/app/templates/editor/level/component/new.jade
+++ b/app/templates/editor/level/component/new.jade
@@ -10,10 +10,10 @@ block modal-body-content
       .controls
         input#level-component-system.input-large(name="system", type="text")
     .control-group
-      label(for="level-component-name", data-i18n="editor.new_component_field_name").control-label Name
+      label(for="level-component-name", data-i18n="general.name").control-label Name
       .controls
         input#level-component-name.input-large(name="name", type="text")
 
 block modal-footer-content
-  button(data-dismiss="modal", data-i18n="editor.new_component_btn_cancel").btn Cancel
-  button(data-i18n="editor.new_component_btn_create").btn.btn-primary#new-level-component-submit Create
+  button(data-dismiss="modal", data-i18n="common.cancel").btn Cancel
+  button(data-i18n="common.create").btn.btn-primary#new-level-component-submit Create
