--- a/app/templates/modal/recover.jade
+++ b/app/templates/modal/recover.jade
@@ -6,7 +6,7 @@ block modal-header-content
 block modal-body-content
   .form-inline
     .control-group
-      label.control-label(for="recover-email", data-i18n="forms.email") Email
+      label.control-label(for="recover-email", data-i18n="general.email") Email
       .controls
         input#recover-email.input-large(name="email", type="email")
 
