--- a/app/templates/modal/save_version.jade
+++ b/app/templates/modal/save_version.jade
@@ -26,5 +26,5 @@ block modal-footer-content
     span(data-i18n="versions.cla_suffix") .
     button.btn#agreement-button(data-i18n="versions.cla_agree") I AGREE
     
-  button.btn(data-dismiss="modal", data-i18n="forms.cancel") Cancel
-  button.btn.btn-primary#save-version-button(data-i18n="forms.save") Save
+  button.btn(data-dismiss="modal", data-i18n="common.cancel") Cancel
+  button.btn.btn-primary#save-version-button(data-i18n="common.save") Save
