Found more duplicate i18n tags and applied it both to the ar.coffee and nl.coffee file

--- a/app/templates/cla.jade
+++ b/app/templates/cla.jade
@@ -82,9 +82,9 @@
   if me.get('anonymous')
     h1
       | Either 
-      a(data-toggle="coco-modal", data-target="modal/signup", data-i18n="nav.sign_up") create an account
+      a(data-toggle="coco-modal", data-target="modal/signup", data-i18n="login.sign_up") create an account
       |  or 
-      a(data-toggle="coco-modal", data-target="modal/login", data-i18n="nav.log_in") log In
+      a(data-toggle="coco-modal", data-target="modal/login", data-i18n="login.log_in") log In
       |  to sign this agreement.
 
   else
