--- a/app/templates/modal/login.jade
+++ b/app/templates/modal/login.jade
@@ -1,7 +1,7 @@
 extends /templates/modal/modal_base
 
 block modal-header-content
-  h3(data-i18n="login.login_modal_title") Log In
+  h3(data-i18n="login.log_in") Log In
 
 block modal-body-content
   .form-inline
