--- a/app/templates/modal/save_version.jade
+++ b/app/templates/modal/save_version.jade
@@ -6,7 +6,7 @@ block modal-header-content
 block modal-body-content
   form.form-horizontal
     .control-group
-      label.control-label(for="commitMessage", data-i18n="versions.commit_message") Commit Message
+      label.control-label(for="commitMessage", data-i18n="general.commit_msg") Commit Message
       .controls
         textarea#commit-message.input-large(name="commitMessage", type="text")
     .control-group
