Found more tags. ar, bg and nl should have now the correct versions with the (re)moved i18n tags.

--- a/app/templates/play/level/tome/cast_button.jade
+++ b/app/templates/play/level/tome/cast_button.jade
@@ -9,7 +9,7 @@ div.btn-group.cast-button-group
       span.dropdown-menu-header(data-i18n="play_level.tome_autocast_delay") Autocast Delay
     li.divider
     li
-      a(data-delay="1000", href="#", data-i18n="play_level.tome_autocast_1") 1 second
-      a(data-delay="3000", href="#", data-i18n="play_level.tome_autocast_3") 3 seconds
-      a(data-delay="5000", href="#", data-i18n="play_level.tome_autocast_5") 5 seconds
-      a(data-delay="90019001", href="#", data-i18n="play_level.tome_autocast_manual") Manual
+      a(data-delay="1000", href="#", data-i18n="common.delay_1_sec") 1 second
+      a(data-delay="3000", href="#", data-i18n="common.delay_3_sec") 3 seconds
+      a(data-delay="5000", href="#", data-i18n="common.delay_5_sec") 5 seconds
+      a(data-delay="90019001", href="#", data-i18n="common.manual") Manual
