--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -10,10 +10,10 @@ block outer_content
         span.level-title #{level.attributes.name}
     
       .level-control-buttons
-        button(data-i18n="editor.level_btn_save").btn.btn-primary#commit-level-start-button Save
-        button(data-i18n="editor.level_btn_fork").btn.btn-primary#fork-level-start-button Fork
+        button(data-i18n="common.save").btn.btn-primary#commit-level-start-button Save
+        button(data-i18n="common.fork").btn.btn-primary#fork-level-start-button Fork
         .btn-group.play-button-group
-          button(title="⌃↩ or ⌘↩: Play preview of current level", data-i18n="editor.level_btn_play")#play-button.btn.btn-inverse.banner Play!
+          button(title="⌃↩ or ⌘↩: Play preview of current level", data-i18n="common.play")#play-button.btn.btn-inverse.banner Play!
           button.btn.btn-inverse.banner.dropdown-toggle(data-toggle="dropdown")
             i.icon-cog.icon-white
       
@@ -22,10 +22,10 @@ block outer_content
               span(data-i18n="editor.level_some_options").dropdown-menu-header Some Options?
             li.divider
             li
-              a(data-delay="1000", href="#", data-i18n="editor.level_options_1_second") 1 second
-              a(data-delay="3000", href="#", data-i18n="editor.level_options_3_seconds") 3 seconds
-              a(data-delay="5000", href="#", data-i18n="editor.level_options_5_seconds") 5 seconds
-              a(data-delay="90019001", href="#", data-i18n="editor.level_options_manual") Manual
+              a(data-delay="1000", href="#", data-i18n="common.delay_1_sec") 1 second
+              a(data-delay="3000", href="#", data-i18n="common.delay_3_sec") 3 seconds
+              a(data-delay="5000", href="#", data-i18n="common.delay_5_sec") 5 seconds
+              a(data-delay="90019001", href="#", data-i18n="common.manual") Manual
       .clearfix
     
       ul.nav.nav-tabs
