Renamed canvases to spritesheets in the edit thang view.

--- a/app/styles/editor/thang/edit.sass
+++ b/app/styles/editor/thang/edit.sass
@@ -66,7 +66,7 @@
     background-color: white
     border-radius: 4px
 
-#canvases
+#spritesheets
   border: 1px solid green
   max-width: 100%
   max-height: 600px
