--- a/app/templates/editor/thang/edit.jade
+++ b/app/templates/editor/thang/edit.jade
@@ -15,7 +15,7 @@ block content
     li
       a(href="#editor-thang-components-tab-view", data-toggle="tab") Components
     li
-      a(href="#editor-thang-canvases-view", data-toggle="tab") Canvases
+      a(href="#editor-thang-spritesheets-view", data-toggle="tab") Spritesheets
     li
       a(href="#editor-thang-colors-tab-view", data-toggle="tab")#color-tab Colors
 
@@ -68,8 +68,8 @@ block content
   
       #thang-components-edit-view
 
-    div.tab-pane#editor-thang-canvases-view
+    div.tab-pane#editor-thang-spritesheets-view
       
-      div#canvases
+      div#spritesheets
 
   .clearfix
