Level editor displays thangs in a more orderly fashion.

--- a/app/styles/editor/level/thangs_tab.sass
+++ b/app/styles/editor/level/thangs_tab.sass
@@ -58,6 +58,17 @@
     h3
       margin: 0 -20px 0 0
       width: 100%
+      
+    h4
+      margin: 0 0 10px
+      clear: both
+      padding: 5px
+      background: rgba(150, 150, 150, 0.5)
+      width: $addPaletteWidth - 20px
+      box-sizing: border-box
+      
+    .clearfix
+      margin-bottom: 20px
 
     .add-thang-palette-icon
       position: relative
