--- a/app/styles/play/level/tome/spell_debug.sass
+++ b/app/styles/play/level/tome/spell_debug.sass
@@ -1,12 +1,10 @@
 @import "../../../bootstrap/mixins"
 
-.tome-debug-view
+.spell-debug-view
   position: absolute
   z-index: 9001
   max-width: 400px
   padding: 10px
   background: transparent url(/images/level/popover_background.png)
   background-size: 100% 100%
-  border: 0
-  @include box-shadow(0 0 0 #000)
       
