--- a/app/templates/editor/level/thangs_tab.jade
+++ b/app/templates/editor/level/thangs_tab.jade
@@ -1,5 +1,17 @@
 .thangs-container.thangs-column
   h3(data-i18n="editor.level_tab_thangs_title") Current Thangs
+  .btn-group(data-toggle="buttons-radio")#extant-thangs-filter
+    button.btn.btn-primary All
+    button.btn.btn-primary(value="Unit")
+      i.icon-user
+    button.btn.btn-primary(value="Wall")
+      i.icon-home
+    button.btn.btn-primary(value="Floor")
+      i.icon-globe
+    button.btn.btn-primary(value="Doodad")
+      i.icon-leaf
+    button.btn.btn-primary(value="Misc")
+      i.icon-question-sign
   #thangs-treema(title="Double click to configure a thang")
 
 .world-container.thangs-column
